# ithome-ironman-2025

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .trigger-ci  2025-09-16-caveat-the-messages-below-were-generated-by-the-u-003.txt  2025-09-16-caveat-the-messages-below-were-generated-by-the-u-004.txt  2025-09-16-caveat-the-messages-below-were-generated-by-the-u-006.txt  2025-09-17-caveat-the-messages-below-were-generated-by-the-u-001.txt  2025-09-17-caveat-the-messages-below-were-generated-by-the-u-002.txt  2025-09-18-can-you-check-in-detail-what-this-repo-is-about-be-001.txt  2025-09-18-can-you-check-in-detail-what-this-repo-is-about-be-002.txt  2025-09-18-can-you-check-in-detail-what-this-repo-is-about-be-003.txt  2025-09-18-can-you-check-in-detail-what-this-repo-is-about-be-005.txt  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GitVersion.yml  LICENSE  README.md  SECURITY.md  SUPPORT.md  deployment-config.yml  docker-compose.yml  notion_ingestion_metrics.json  pyproject.toml  recreate_issue_body.md  rfc_tracking.db  runs.json  test-automation-validation.md  test_results.json
.gemini/: config.yaml  styleguide.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.nuke/: build  build.json  build.schema.json
artifacts/: GameConsole.Audio.Core.1.0.0.nupkg  GameConsole.Core.Abstractions.1.0.0.nupkg  GameConsole.Core.Registry.1.0.0.nupkg  GameConsole.Engine.Core.1.0.0.nupkg  GameConsole.Graphics.Core.1.0.0.nupkg  TestLib.1.0.0.nupkg  (+5 more)
(+1350 files in other folders)
